syntax = "proto3";

package apollo.proto.agent.v1;

import "google/protobuf/struct.proto";
import "apollo/proto/shared/v1/shared.proto";

option go_package = "github.com/dennishilgert/apollo/pkg/proto/agent/v1;agent";

service Agent {
  rpc Initialize(InitializeRuntimeRequest) returns (apollo.proto.shared.v1.EmptyResponse) {}
  rpc Invoke(InvokeRequest) returns (InvokeResponse) {}
}

message ContextData {
  string runtime = 1;
  string runtime_version = 2;
  string runtime_handler = 3;
  int32 v_cpu_cores = 4;
  int32 memory_limit = 5;
}

message EventData {
  string uuid = 1;
  string type = 2;
  google.protobuf.Struct data = 3;
}

message InitializeRuntimeRequest {
  string handler = 1;
  string binary_path = 2;
  repeated string binary_args = 3;
}

message InvokeRequest {
  ContextData context = 1;
  EventData event = 2;
}

message InvokeResponse {
  string event_uuid = 1;
  int32 status = 2;
  string status_message = 3;
  string duration = 4;
  repeated google.protobuf.Struct logs = 5;
  google.protobuf.Struct data = 6;
}