syntax = "proto3";

package apollo.proto.health.v1;

option go_package = "github.com/dennishilgert/apollo/pkg/proto/health/v1;healthpb";

service Health {
  rpc Status(HealthStatusRequest) returns (HealthStatusResponse) {}
}

enum HealthStatus {
  HEALTH_STATUS_UNSPECIFIED = 0;
  HEALTHY = 1;
  UNHEALTHY = 2;
}

message HealthStatusRequest {}

message HealthStatusResponse {
  HealthStatus status = 1;
}